--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+    <meta content="width=device-width,initial-scale=1,user-scalable=no" name="viewport">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-touch-fullscreen" content="yes">
+    <meta name="format-detection" content="telephone=no,address=no">
+    <meta name="apple-mobile-web-app-status-bar-style" content="white">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
+    <title>通知车主</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-<div>test</div>
+<div class="page-wrapper">
+    <div class='sorry-box'>
+        <div class='sorry-image'></div>
+    </div>
+    <div class='top-tip'>临时停靠，请多包涵</div>
+    <div class='second-tip'>点击下方按钮联系车主</div>
+    <div class='btn-wrapper'>
+        <a href="tel:18227101169" class='tel-btn'>车主</a>
+        <a href="tel:15228989373" class='tel-btn'>另一位车主</a>
+    </div>
+</div>
 </body>
 </html>
